AMP-197 Introducing SubscriptionServiceV2. (Part-3)